--- a/pages/order/order_index/order_index.wxml
+++ b/pages/order/order_index/order_index.wxml
@@ -23,8 +23,7 @@
         bindtap="clickNav"
         data-index="{{index}}"
       >
-        {{item.text}}
-        <view wx:if="{{item.count}}" class="nav_count">{{item.count}}</view>
+        {{item.text}}(<text wx:if="{{countArr[index]>=99}}">99</text><text wx:else>{{countArr[index]}}</text>)
       </view>
     </view>
   </view>
@@ -66,18 +65,16 @@
               class="item_content_content_top"
             >
               <view class="item_content_title textOmit">{{itm.goodsName}}</view>
-              <view class="item_content_desc textOmit" 
-                catchtap="callPhone" 
-                data-phone="{{itm.phoneNumber}}"
-              >
+              <view class="item_content_desc nameAndPhone textOmit">
                 <text>{{itm.custName}}</text>
                 <text decode="{{true}}">&nbsp;&nbsp;&nbsp;</text>
                 <text wx:if="{{itm.phoneNumber}}">{{itm.phoneNumber}}</text>
-                <van-icon wx:if="{{itm.phoneNumber}}"
-                  name="phone" 
-                  color='#00a6ff' 
-                  style="margin-left:3rpx;position:relative;top:4rpx;" 
-                />
+                <image wx:if="{{itm.phoneNumber}}"
+                  class="callphone_icon" 
+                  src='https://cdn.s.bld365.com/getli_order_index_callphone_icon.png' alt=''
+                  catchtap="callPhone" 
+                  data-phone="{{itm.phoneNumber}}"
+                ></image>
               </view>
               <view class="item_content_desc textOmit">
                 {{itm.provinceName}}{{itm.eparchyName}}{{itm.cityName}}{{itm.address}}
@@ -88,18 +85,16 @@
               class="item_content_content_top"
             >
               <view class="item_content_title textOmit">{{itm.goodsName}}</view>
-              <view class="item_content_desc textOmit" 
-                catchtap="callPhone" 
-                data-phone="{{item.phoneNumber}}"
-              >
+              <view class="item_content_desc nameAndPhone textOmit">
                 <text>{{item.custName}}</text>
                 <text decode="{{true}}">&nbsp;&nbsp;&nbsp;</text>
                 <text wx:if="{{item.phoneNumber}}">{{item.phoneNumber}}</text>
-                <van-icon wx:if="{{item.phoneNumber}}"
-                  name="phone" 
-                  color='#00a6ff' 
-                  style="margin-left:3rpx;position:relative;top:4rpx;" 
-                />
+                <image wx:if="{{item.phoneNumber}}"
+                  class="callphone_icon" 
+                  src='https://cdn.s.bld365.com/getli_order_index_callphone_icon.png' alt=''
+                  catchtap="callPhone" 
+                  data-phone="{{item.phoneNumber}}"
+                ></image>
               </view>
               <view class="item_content_desc textOmit">
                 {{item.provinceName}}{{item.eparchyName}}{{item.cityName}}{{item.address}}
