--- a/pages/order/order_index/order_index.wxml
+++ b/pages/order/order_index/order_index.wxml
@@ -110,12 +110,16 @@
                 <text wx:else>{{itm.priceFeeYuan}}元</text>
                 <text wx:if="{{navIndex==1&&item.orderStatus==50}}"><text decode="{{true}}">&nbsp;</text>x{{itm.goodsCount}}</text>
               </view>
+
+              <view wx:if="{{itm.goodsCount}}"><text decode="{{true}}">x&nbsp;</text>{{itm.goodsCount}}</view>
             </view>
             <!-- 销售单接口 -->
             <view wx:if="{{navIndex==2||navIndex==3}}"
               class="yuan_wrap flexCenter flexBetween"
             >
               <view>{{itm.tradeFeeStr}}元</view>
+
+              <view wx:if="{{itm.goodsCount}}"><text decode="{{true}}">x&nbsp;</text>{{itm.goodsCount}}</view>
             </view>
           </view>
         </view>
