--- a/pages/order/order_index/order_index.wxml
+++ b/pages/order/order_index/order_index.wxml
@@ -1,21 +1,28 @@
 <!-- 订单主页 -->
 <view class="order_page">
-  <!-- 固定 -->
-  <view class="top">
-    <!-- 搜索 -->
-    <!-- <view class="search_wrap bg_white">
-      <view class="search_content flexCenter">
-        <van-icon name="search" 
-          size="1.5em" 
-          color="#9B9B9B"
-        />
+  <!-- 自定义导航栏 -->
+  <view class="nav_custom_wrap" style="padding-top:{{paddingTop}}PX;padding-bottom:10PX;">
+    <view class="nav_custom flex" style="height:{{height}}PX;width:{{width}}PX;">
+      <view class="search_wrap flexCenter" 
+        bindtap="goSearch"
+      >
+        <van-icon name="search" color='#9B9B9B' class="flexCenter" />
         <input class="search_input"
-          placeholder="输入型号"
-          confirm-type='搜索'
+          placeholder="请输入认筹单号、销售单号或联系电话"
+          placeholder-class="search_input_placeholder"
+          confirm-type='search'
+          value="{{search_value}}"
+          bindinput="onChange"
+          data-key='search_value'
+          bindconfirm="onSearchConfirm"
+          disabled="{{true}}"
         ></input>
       </view>
-    </view> -->
+    </view>
+  </view>
 
+  <!-- 固定 -->
+  <view class="top" style="margin-top:{{paddingTop+height+10}}PX;">
     <!-- 状态 -->
     <view class="nav">
       <view wx:for="{{navList}}" wx:key="index"
@@ -30,7 +37,7 @@
   
 
   <!-- list -->
-  <view class="list">
+  <view class="list" style="margin-top:{{paddingTop+height+65}}PX;">
     <block>
       <view wx:for="{{showList}}" wx:key="index"
         class="item"
