--- a/pages/order/order_index/order_index.wxml
+++ b/pages/order/order_index/order_index.wxml
@@ -141,8 +141,11 @@
               class="yuan_wrap flexCenter flexBetween"
             >
               <view>
-                <text wx:if="{{itm.priceFeeActivityYuan}}">{{itm.priceFeeActivityYuan}}元</text>
-                <text wx:else>{{itm.priceFeeYuan}}元</text>
+                <block wx:if="{{navIndex==1}}">
+                  <text wx:if="{{itm.priceFeeActivityYuan}}">{{itm.priceFeeActivityYuan}}元</text>
+                  <text wx:else>{{itm.priceFeeYuan}}元</text>
+                </block>
+                
                 <text wx:if="{{navIndex==1&&item.orderStatus==50}}"><text decode="{{true}}">&nbsp;</text>x{{itm.goodsCount}}</text>
               </view>
 
