--- a/pages/order/order_index/order_index.wxml
+++ b/pages/order/order_index/order_index.wxml
@@ -66,11 +66,17 @@
             <view class="datetime">{{item.ticketCode}}</view>
           </view>
         </block>
-        <view wx:if="{{item.salerUserLoginName}}"
+        <view wx:if="{{item.salerUserLoginName&&(navIndex==0||navIndex==1)}}"
           class="item_title flexBetween van-hairline--bottom" style="height:60rpx;"
         >
           <view class="datetime">导购员</view>
           <view class="datetime">{{item.salerUserLoginName}}</view>
+        </view>
+        <view wx:if="{{item.salerUserName&&(navIndex==2||navIndex==3)}}"
+          class="item_title flexBetween van-hairline--bottom" style="height:60rpx;"
+        >
+          <view class="datetime">导购员</view>
+          <view class="datetime">{{item.salerUserName}}</view>
         </view>
 
         <!-- 商品 -->
